# GrowthBible

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: VerseFinder.hpp
includes/features/chapter/: ChapterFinder.hpp
includes/features/console_ui/: MainMenu.hpp
includes/features/navigation/: bookmap.hpp
includes/features/sqlite/: sqlite.hpp
includes/features/verse/: DailyVerse.hpp  VerseFinder.hpp  WordSearch.hpp
src/: VerseFinder.cpp
src/console_ui/: MainMenu.cpp
src/features/chapter/: ChapterFinder.cpp
src/features/navigation/: bookmap.cpp
src/features/sqlite/: sqlite.cpp
src/features/verse/: DailyVerse.cpp  VerseFinder.cpp  WordSearch.cpp
src_tests/: test.cpp
test_includes/: test.hpp
text/: 2John.txt
